Added canceled parameter to proposals/list route
